Spacings fixed on mode change
reconfigured the spacings when changing clock modes

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,7 @@ br{
   padding-left: 0.5em;
   padding-right: 0.2em;
   margin: 0px 0px;
+  margin-left: 0.3em;
   width: 5em;
   line-height: 1em;
 }
